# work-navigation-app

./: .commitlintrc.json  .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
addon-sdk/examples/hello-step/: Cargo.toml
addon-sdk/examples/hello-step/src/: lib.rs
addon-sdk/examples/opc-ua-bridge/: Cargo.toml
addon-sdk/examples/opc-ua-bridge/src/: lib.rs
addon-sdk/examples/slack-notify/: Cargo.toml
addon-sdk/examples/slack-notify/src/: lib.rs
addon-sdk/rust/: Cargo.toml
addon-sdk/rust/src/: api.rs  lib.rs
apps/terminal/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/terminal/src-tauri/src/: lib.rs  main.rs  media.rs  secure_storage.rs
examples/cli-client/: Cargo.toml
examples/cli-client/src/: main.rs
services/backend/crates/adapter/: Cargo.toml
services/backend/crates/adapter/src/: argon2_hasher.rs  dto.rs  hs256_session_factory.rs  lib.rs  memory_idempotency_store.rs  postgres_audit_repository.rs  postgres_credential_repository.rs  postgres_lww_repository.rs  postgres_master_repository.rs  postgres_order_repository.rs  postgres_repository.rs
services/backend/crates/addon-runtime/: Cargo.toml
services/backend/crates/addon-runtime/src/: capability_check.rs  lib.rs  limits.rs  manifest.rs  signature.rs  wasmtime_host.rs
services/backend/crates/domain/: Cargo.toml
services/backend/crates/domain/src/: error.rs  lib.rs  repository.rs  sync.rs  task.rs  value_object.rs
services/backend/crates/domain/src/auth/: credential.rs  mod.rs  session.rs  user.rs
services/backend/crates/domain/src/process/: graph.rs  mod.rs  tests.rs
services/backend/crates/domain/src/production_order/: mod.rs  tests.rs
services/backend/crates/infrastructure/: Cargo.toml
services/backend/crates/infrastructure/src/: config.rs  lib.rs  main.rs
services/backend/crates/infrastructure/src/commands/: mod.rs  seed.rs  seed_data.rs
services/backend/crates/presentation/: Cargo.toml
services/backend/crates/presentation/src/: api_error.rs  app_state.rs  handler_audit.rs  handler_auth.rs  handler_dashboard.rs  handler_flows.rs  handler_health.rs  handler_master.rs  handler_records.rs  handler_tasks.rs  lib.rs  middleware_auth.rs  middleware_request_id.rs  router.rs
services/backend/crates/usecase/: Cargo.toml
services/backend/crates/usecase/src/: append_record.rs  lib.rs  login.rs  receive_order.rs  start_task.rs  sync_push.rs
src/backend/: .clippy.toml  .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  rust-toolchain.toml  rustfmt.toml
src/backend/.cargo/: config.toml
src/backend/benches/: Cargo.toml  bench_db_queries.rs  bench_hash_chain.rs  bench_idempotency.rs  bench_json_logic.rs
src/backend/crates/wnav_auth/: Cargo.toml
src/backend/crates/wnav_auth/src/: claims.rs  current_user.rs  error.rs  jwt.rs  lib.rs  middleware.rs  password.rs  rbac.rs
src/backend/crates/wnav_common/: Cargo.toml
src/backend/crates/wnav_common/locales/: en.toml  ja-simple.toml  ja.toml
src/backend/crates/wnav_common/src/: api_client.rs  clock.rs  error.rs  id_generator.rs  lib.rs  locale.rs
src/backend/crates/wnav_config/: Cargo.toml
src/backend/crates/wnav_config/src/: error.rs  lib.rs  profile.rs  redact.rs  schema.rs  secret_ref.rs  sources.rs  validation.rs
src/backend/crates/wnav_config/tests/: compile_fail_tests.rs  fail_fast.rs  merge_rules.rs  profile_selection.rs  redact.rs  secret_ref_resolution.rs
src/backend/crates/wnav_config/tests/compile_fail/: terminal_no_write.rs  terminal_no_write.stderr
src/backend/crates/wnav_db/: Cargo.toml
src/backend/crates/wnav_db/src/: error.rs  lib.rs  pool.rs  row_types.rs  transaction.rs
src/backend/crates/wnav_db/src/repository/: andon_repo.rs  auth_log_repo.rs  capa_repo.rs  case_lock_repo.rs  disposition_repo.rs  electronic_signature_repo.rs  evidence_repo.rs  hash_chain_block_repo.rs  idempotency_repo.rs  (+13 more)
src/backend/crates/wnav_domain/: Cargo.toml
src/backend/crates/wnav_domain/src/: error.rs  events.rs  lib.rs  rules.rs
src/backend/crates/wnav_hash_chain/: Cargo.toml
src/backend/crates/wnav_hash_chain/src/: canonical.rs  correction.rs  error.rs  hash.rs  lib.rs  verify.rs
src/backend/crates/wnav_master_api/: Cargo.toml
src/backend/crates/wnav_master_api/src/: error.rs  main.rs  router.rs  state.rs
src/backend/crates/wnav_outbox/: Cargo.toml
src/backend/crates/wnav_outbox/src/: consumer.rs  error.rs  event_type.rs  lib.rs
src/backend/crates/wnav_terminal_api/: Cargo.toml
src/backend/crates/wnav_terminal_api/src/: error.rs  main.rs  router.rs  state.rs
src/backend/crates/wnav_webhook/: Cargo.toml
src/backend/crates/wnav_webhook/src/: error.rs  lib.rs  receiver.rs  sender.rs  signature.rs
src/backend/migrations/: V20260519120001__create_roles_and_extensions.sql  V20260519120002__create_master_tables.sql  V20260519120003__create_transaction_tables.sql  V20260519120004__create_work_assignment_tables.sql  V20260519120005__create_indexes.sql  V20260519120006__create_views.sql  V20260519120007__create_append_only_triggers.sql  V20260519120008__grant_role_privileges.sql  V20260519120009__create_partitions.sql  V20260519120010__seed_minimum.sql  V20260519120011__create_missing_tables.sql
src/backend/migrations_sqlite/: V20260519130001__create_sqlite_mirror_tables.sql  V20260519130002__create_sqlite_app_settings.sql  V20260519130003__create_sqlite_local_outbox.sql  V20260519130004__create_sqlite_work_cache.sql
src/backend/tests/: Cargo.toml  lib.rs
src/backend/tests/alcoa/: test_alcoa_complete.rs
src/backend/tests/integration/: common.rs  test_append_only.rs  test_case_lock.rs  test_hash_chain.rs  test_idempotency.rs  test_iqc_decision.rs  test_master_rollback.rs  test_migrations.rs  test_outbox.rs  test_pg_sqlite_drift.rs  test_rework_state.rs  test_role_permissions.rs  test_sop_publish.rs  test_trace_api.rs  test_work_assignment.rs
src/backend/tests/security/: test_security.rs
(+1855 files in other folders)
