[workspace]
members = [
    "crates/wnav_config",
    "crates/wnav_common",
    "crates/wnav_hash_chain",
    "crates/wnav_domain",
    "crates/wnav_db",
    "crates/wnav_auth",
    "crates/wnav_outbox",
    "crates/wnav_webhook",
    "crates/wnav_terminal_api",
    "crates/wnav_master_api",
    # テスト・ベンチマーク（統合テスト・ALCOA+・セキュリティ・パフォーマンス）
    "tests",
    "benches",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["RyuheiKiso"]
license = "MIT"

[workspace.dependencies]
# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# Web フレームワーク
axum = { version = "0.8", features = ["multipart", "macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "request-id",
    "timeout",
    "limit",
] }
tower-governor = "0.7"

# DB
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "uuid",
    "chrono",
    "json",
    "offline",
] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# エラー型
thiserror = "2"
anyhow = "1"

# ロギング
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# 時刻
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# 暗号・ハッシュ
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rsa = { version = "0.9", features = ["pem", "serde"] }
jsonwebtoken = "9"
rand = "0.8"

# HTTP クライアント
reqwest = { version = "0.12", features = ["json", "native-tls"] }

# 設定
figment = { version = "0.10", features = ["yaml", "env"] }

# 国際化
rust-i18n = "3"

# キャッシュ
moka = { version = "0.12", features = ["future"] }

# JSON Logic
jsonlogic-rs = "0.5"

# SSE
tokio-stream = "0.1"
axum-extra = { version = "0.10", features = ["typed-header"] }

# テスト
testcontainers = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# ベンチマーク
criterion = { version = "0.5", features = ["async_tokio"] }

# 設定 / YAML
serde_yaml = "0.9"

# その他ユーティリティ
bytes = "1"
http = "1"
futures = "0.3"
async-trait = "0.1"
once_cell = "1"
tempfile = "3"
trybuild = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
# 例外: モジュール名重複は許容（例: auth::AuthError）
module_name_repetitions = "allow"
# 例外: doc コメントのリンク省略は許容
missing_errors_doc = "allow"
missing_panics_doc = "allow"
