# 対応 §: ロードマップ §17 §17.7 §10.3.1 §10.3.4
# OPC UA Bridge サンプルアドオン。
# 設備テレメトリ（OPC UA タグ値）を本アプリの作業実績へブリッジする最小実装。
# 実 OPC UA 通信は将来 `opcua` crate を adapter 層に組み込む（本骨格では擬似的）。

[package]
name = "wna-addon-opc-ua-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "OPC UA bridge sample addon for work-navigation-app (§17.7)"

[lib]
crate-type = ["cdylib"]

[dependencies]
wna-addon-sdk = { path = "../../rust" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
