# 対応 §: ロードマップ §17 §17.7
# Slack 通知サンプルアドオン。`notify(channel="slack", ...)` を呼び出して
# Slack Webhook 等を経由する通知の最小実装を示す。

[package]
name = "wna-addon-slack-notify"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Slack notification sample addon for work-navigation-app (§17.7)"

[lib]
crate-type = ["cdylib"]

[dependencies]
# SDK trait のみに依存
wna-addon-sdk = { path = "../../rust" }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
