# 対応 §: ロードマップ §7.1 §8 §17
# Tauri 2.x の native side（Rust）。バックエンドの services/backend と直接結合せず、
# 端末ローカル DB（SQLite）と REST 経由のサーバ通信を担う薄い層。

# Tauri 側は独立 toolchain（android-ndk／windows SDK）が必要なため、
# ルートワークスペースから切り離す（空 [workspace] table で独立ワークスペース化）
[workspace]

[package]
name = "wna-terminal-tauri"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "work-navigation-app terminal Tauri host (§7.1)"

[lib]
name = "wna_terminal_tauri"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0", features = [] }
# 境界エラーの派生
thiserror = "1"
# SHA-256（メディアハッシュ計算、§10.4.5）
sha2 = "0.10"
# UTC ISO 8601（§20.2）
chrono = { version = "0.4", features = ["serde"] }
# SQLCipher（暗号化 SQLite）。`bundled-sqlcipher` で sqlcipher を内蔵ビルドする。
# 本リポジトリのワークスペース外として独立 dependency tree を持つ（Tauri 側）。
# WSL2 開発時の C コンパイラ問題を避けるため optional とする。
rusqlite = { version = "0.31", default-features = false, optional = true }

[features]
custom-protocol = ["tauri/custom-protocol"]
# 暗号化 SQLite を有効化する場合に指定する。
# `cargo build --features sqlcipher` で sqlcipher 内蔵ビルドへ切替。
# 本リポジトリの CI／開発時は OFF（環境差を最小化）。
sqlcipher = ["rusqlite/bundled-sqlcipher"]
