[package]
name = "wnav_benches"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# TST-perf-001/002: ハッシュチェーン計算ベンチマーク
[[bench]]
name = "bench_hash_chain"
path = "bench_hash_chain.rs"
harness = false

# TST-perf-003: Idempotency キャッシュヒット率測定
[[bench]]
name = "bench_idempotency"
path = "bench_idempotency.rs"
harness = false

# TST-perf-004: JSON Logic 評価速度
[[bench]]
name = "bench_json_logic"
path = "bench_json_logic.rs"
harness = false

# TST-perf-005/006: DB クエリパフォーマンス
[[bench]]
name = "bench_db_queries"
path = "bench_db_queries.rs"
harness = false

[dev-dependencies]
# ハッシュチェーンクレート
wnav_hash_chain = { path = "../crates/wnav_hash_chain" }

# ベンチマークフレームワーク
criterion = { version = "0.5", features = ["async_tokio"] }

# JSON Logic
jsonlogic-rs = "0.5"

# UUID
uuid = { version = "1", features = ["v4", "v7"] }

# 日時
chrono = { version = "0.4", features = ["serde"] }

# シリアライズ
serde_json = "1"

# 非同期ランタイム（DB ベンチマーク用）
tokio = { version = "1", features = ["full"] }

# DB ドライバ（環境変数 WNAV_TEST_DB_URL が設定されている場合のみ使用）
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-none",
    "uuid",
    "chrono",
] }

# 暗号
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
