[package]
name = "wnav_tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

# 統合テスト（TST-intg-001〜014）
[[test]]
name = "test_migrations"
path = "integration/test_migrations.rs"

[[test]]
name = "test_append_only"
path = "integration/test_append_only.rs"

[[test]]
name = "test_role_permissions"
path = "integration/test_role_permissions.rs"

[[test]]
name = "test_idempotency"
path = "integration/test_idempotency.rs"

[[test]]
name = "test_case_lock"
path = "integration/test_case_lock.rs"

[[test]]
name = "test_hash_chain"
path = "integration/test_hash_chain.rs"

[[test]]
name = "test_outbox"
path = "integration/test_outbox.rs"

[[test]]
name = "test_sop_publish"
path = "integration/test_sop_publish.rs"

[[test]]
name = "test_iqc_decision"
path = "integration/test_iqc_decision.rs"

[[test]]
name = "test_rework_state"
path = "integration/test_rework_state.rs"

[[test]]
name = "test_pg_sqlite_drift"
path = "integration/test_pg_sqlite_drift.rs"

[[test]]
name = "test_master_rollback"
path = "integration/test_master_rollback.rs"

[[test]]
name = "test_work_assignment"
path = "integration/test_work_assignment.rs"

[[test]]
name = "test_trace_api"
path = "integration/test_trace_api.rs"

# ALCOA+ 検証テスト（TST-alcoa-001〜010）
[[test]]
name = "test_alcoa_complete"
path = "alcoa/test_alcoa_complete.rs"

# セキュリティテスト（TST-sec-001〜011）
[[test]]
name = "test_security"
path = "security/test_security.rs"

[dev-dependencies]
# ドメインクレート（ビジネスロジック・モデル）
wnav_domain = { path = "../crates/wnav_domain" }
wnav_hash_chain = { path = "../crates/wnav_hash_chain" }

# テストコンテナ（実 PostgreSQL）
testcontainers = { version = "0.23", features = ["blocking"] }
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# DB ドライバ（テスト用・runtime-tokio + tls-none でビルド環境の OpenSSL 依存を回避）
sqlx = { version = "0.8", features = [
    "postgres",
    "runtime-tokio",
    "tls-none",
    "uuid",
    "chrono",
    "json",
] }

# 非同期ランタイム
tokio = { version = "1", features = ["full"] }

# シリアライズ
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID（テスト用 UUID v7 生成）
uuid = { version = "1", features = ["v4", "v7", "serde"] }

# 日時
chrono = { version = "0.4", features = ["serde"] }

# 暗号（HMAC 署名テスト用）
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# JSON Logic（Step エンジンのベンチマーク用）
jsonlogic-rs = "0.5"
