# 対応 §: ロードマップ §7.3 §9.1 §10.3.1
# adapter 層: PostgreSQL 永続化、DTO 変換。

[package]
name = "wna-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "work-navigation-app adapter layer (PostgreSQL repository, DTO)"

[dependencies]
# ドメイン層
wna-domain = { path = "../domain" }
# ユースケース層（RecordRepository などの trait を実装するため参照）
wna-usecase = { path = "../usecase" }
# シリアライズ
serde.workspace = true
serde_json.workspace = true
# PostgreSQL
sqlx.workspace = true
# UUID（DeviceId 検証用）
uuid.workspace = true
# UTC ISO 8601
chrono.workspace = true
# 境界エラーの派生
thiserror.workspace = true
# 構造化ログ
tracing.workspace = true
# Argon2id パスワードハッシュ（§10.5.1 ADR-0007）
argon2 = "0.5"
# 乱数（ハッシュソルト用）
rand_core = { version = "0.6", features = ["std"] }
# HMAC-SHA256（セッショントークン署名、§10.5 §11.4 ADR-0010）
hmac = "0.12"
sha2 = "0.10"
# Base64URL エンコード（不透明トークン文字列化）
base64 = "0.22"

[dev-dependencies]
# 非同期テストランナー
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[lints]
workspace = true
