# 対応 §: ロードマップ §17 §17.5 §27 F-004 §29 R-008
# アドオン WASM ランタイム crate。Wasmtime ベースで CPU／メモリ／実行時間制限を強制し、
# capability ベースのホスト関数を注入する。
#
# 注意: Wasmtime 自体はサイズ大かつ依存解決が重い。本セッションでは **抽象 trait と
# capability チェックロジックの本体** のみを実装し、Wasmtime 実体は feature flag で
# 切り替え可能にする（CI のビルド時間と環境依存を抑える）。

[package]
name = "wna-addon-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Wasmtime-based addon runtime for work-navigation-app (§17.5)"

[dependencies]
# SDK の trait／値型を参照
wna-addon-sdk = { path = "../../../../addon-sdk/rust" }
serde.workspace = true
serde_json.workspace = true
# 境界エラーの派生
thiserror.workspace = true
# 構造化ログ
tracing.workspace = true
# Wasmtime（feature 有効時のみ）
wasmtime = { version = "23", default-features = false, features = ["cranelift", "wat"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "sync"] }

[features]
# 既定では Wasmtime 抽象だけをコンパイルする（環境依存を最小化）
default = []
# Wasmtime 実体を取り込む
wasmtime-runtime = ["wasmtime"]

[lints]
workspace = true
