# 対応 §: ロードマップ §7.3 §9.1 §14.2
# infrastructure 層: tokio::main エントリ、DI コンテナ、環境変数読込。

[package]
name = "wna-infrastructure"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "work-navigation-app infrastructure layer (entrypoint, DI)"

[[bin]]
name = "wna-backend"
path = "src/main.rs"

[dependencies]
# 内側全層
wna-domain = { path = "../domain" }
wna-usecase = { path = "../usecase" }
wna-adapter = { path = "../adapter" }
wna-presentation = { path = "../presentation" }
# 非同期ランタイム
tokio.workspace = true
# axum サーバ起動
axum.workspace = true
# sqlx PgPool 構築
sqlx.workspace = true
# 構造化ログ
tracing.workspace = true
tracing-subscriber.workspace = true
# anyhow（main 関数の合成エラー）
anyhow.workspace = true
# thiserror（ConfigError 派生）
thiserror.workspace = true
# clap: CLI サブコマンド分岐（serve / seed）
clap = { version = "4", features = ["derive"] }

[lints]
workspace = true
