# 対応 §: ロードマップ §7.3 §10.3.1
# presentation 層: axum REST API。

[package]
name = "wna-presentation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "work-navigation-app presentation layer (axum REST)"

[dependencies]
# ドメイン層
wna-domain = { path = "../domain" }
# ユースケース層
wna-usecase = { path = "../usecase" }
# adapter（DTO 変換のみ参照／実装には依存しない）
wna-adapter = { path = "../adapter" }
# axum（middleware feature を有効化）
axum = { workspace = true, features = ["macros"] }
tower = "0.4"
# tokio
tokio.workspace = true
# serde
serde.workspace = true
serde_json.workspace = true
# 構造化ログ
tracing.workspace = true
# UTC ISO 8601 タイムスタンプ（監査ログ／タイマー）
chrono = { version = "0.4", features = ["serde"] }
# Base64URL（HS256 トークン検証用）
base64 = "0.22"
# UUIDv7 ベースのリクエスト ID 生成
uuid = { workspace = true }
# /readyz の DB ping
sqlx = { workspace = true }

[lints]
workspace = true
