[package]
name = "wnav_common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
default = []
# TLS バックエンドはビルド環境に応じて選択する
# CI / Docker (OpenSSL あり) では tls-native を有効にする
# pkg-config 不要な環境では tls-rustls を有効にする
tls-native = ["reqwest/native-tls"]
tls-rustls = ["reqwest/rustls-tls"]

[dependencies]
uuid = { version = "1", features = ["v7", "v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
# TLS なしでコンパイル可能にする（TLS は feature フラグで有効化する）
reqwest = { version = "0.12", features = ["json"], default-features = false }
rust-i18n = "3"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
