[package]
name = "wnav_config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
figment = { version = "0.10", features = ["yaml", "env"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
trybuild = "1"
serde_json = "1"
