[package]
name = "wnav_db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
wnav_domain = { path = "../wnav_domain" }
wnav_common = { path = "../wnav_common" }
wnav_hash_chain = { path = "../wnav_hash_chain" }
# runtime-tokio-native-tls は本番使用（OpenSSL 必要）。
# 本ビルド環境では OpenSSL ヘッダが未インストールのため runtime-tokio を使用する。
# 本番デプロイ時は native-tls または rustls フィーチャーに切り替えること。
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-none", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync"] }
