[package]
name = "wnav_domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
wnav_common = { path = "../wnav_common" }
wnav_hash_chain = { path = "../wnav_hash_chain" }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
jsonlogic-rs = "0.5"
tokio = { version = "1", features = ["sync"] }
