[package]
name = "wnav_master_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "wnav_master_api"
path = "src/main.rs"

[dependencies]
wnav_config = { path = "../wnav_config" }
wnav_common = { path = "../wnav_common" }
wnav_domain = { path = "../wnav_domain" }
wnav_db = { path = "../wnav_db" }
wnav_auth = { path = "../wnav_auth" }
wnav_hash_chain = { path = "../wnav_hash_chain" }
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "timeout"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# runtime-tokio-native-tls は本番使用（OpenSSL 必要）。
# 本ビルド環境では OpenSSL ヘッダが未インストールのため runtime-tokio + tls-none を使用する。
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-none", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
# 暗号・ハッシュ（work_assignments HMAC-SHA256 署名検証）
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
# HTTP クライアント（バックアップ通知）
reqwest = { version = "0.12", features = ["json"], default-features = false }
