[package]
name = "wnav_terminal_api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "wnav_terminal_api"
path = "src/main.rs"

[dependencies]
wnav_config = { path = "../wnav_config" }
wnav_common = { path = "../wnav_common" }
wnav_domain = { path = "../wnav_domain" }
wnav_db = { path = "../wnav_db" }
wnav_auth = { path = "../wnav_auth" }
wnav_outbox = { path = "../wnav_outbox" }
wnav_webhook = { path = "../wnav_webhook" }
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "timeout"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
# runtime-tokio + tls-none を使用してビルド環境のOpenSSL/ring 依存を回避する
# 本番デプロイ時は runtime-tokio-native-tls または runtime-tokio-rustls に切り替えること
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "tls-none", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
futures = "0.3"
