[package]
name = "wnav_webhook"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
wnav_common = { path = "../wnav_common" }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
# native-tls は OpenSSL ヘッダが必要。ビルド環境に合わせて切り替えること。
# 本番デプロイ時は native-tls に戻す（Windows IIS 環境での証明書互換性のため）
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
tokio = { version = "1", features = ["sync", "time"] }

[lints]
workspace = true
